style.css
.css-1p05t8e.epcbefy1 {
    border: 0px;
    padding: 0px;
}

.css-12ttj6m.epcbefy1 {
    border: 0px;
    padding: 0px;
}


.row-widget.css-k008qs.epcbefy2 {
    
    text-align: center;
}

.css-1ehzy7p.edgvbvh5 {
    width: 150px;
}

.css-1x8cf1d.edgvbvh5 {
    width: 150px;
}

.css-5uatcg.edgvbvh5 {
    width: 150px;
}
/*
p {
    font-size: 3vh;
    line-height: 40px;
    padding: 0 25px;
}
*/
div.block-container {
    padding-top: 50px;
}

hr {
    border-bottom: solid 2px #7c7c7c31;
}

.streamlit-expander {
    border: none;
    border-radius: 0px;
    border-bottom: solid 2px #7c7c7c31;
}

h2 {
    padding: 20px;
    font-size: 2rem;
    font-weight: 300;
}

footer {
	visibility: hidden;
}

.css-1vzt17l.e1tzin5v0 {
    text-align: center;
    margin-top: 33px;
}

.css-4fbub3.e1tzin5v0 {
    text-align: center;
}

.css-1odc07i.edgvbvh10 {
    width: 100%;
}

.css-1ehzy7p.edgvbvh10 {
    width: 150px;
}

.css-1odc07i.edgvbvh5 {
    width: 100%;
}

.stTextArea {
    margin-top: 28px;
}

